// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly renders correctly with custom color 1`] = `
<h1
  aria-label=""
  className="headingComponent heading-component elementTypeH1 element-type-h1 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
  data-testid="heading"
  style={
    Object {
      "color": "blue",
    }
  }
>
  Hello
</h1>
`;

exports[`Renders correctly renders correctly with different sizes 1`] = `
<div>
  <h1
    aria-label=""
    className="headingComponent heading-component elementTypeH1 element-type-h1 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H1
  </h1>
  <h1
    aria-label=""
    className="headingComponent heading-component elementTypeH1 element-type-h1 sizeMedium size-medium singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H1 medium
  </h1>
  <h2
    aria-label=""
    className="headingComponent heading-component elementTypeH2 element-type-h2 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H2
  </h2>
  <h2
    aria-label=""
    className="headingComponent heading-component elementTypeH2 element-type-h2 sizeSmall size-small singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H2 small
  </h2>
  <h3
    aria-label=""
    className="headingComponent heading-component elementTypeH3 element-type-h3 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H3
  </h3>
  <h4
    aria-label=""
    className="headingComponent heading-component elementTypeH4 element-type-h4 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H4
  </h4>
  <h5
    aria-label=""
    className="headingComponent heading-component elementTypeH5 element-type-h5 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
    data-testid="heading"
  >
    Hello H5
  </h5>
</div>
`;

exports[`Renders correctly renders correctly with empty props 1`] = `
<h1
  aria-label=""
  className="headingComponent heading-component elementTypeH1 element-type-h1 sizeLarge size-large singleLineEllipsis single-line-ellipsis"
  data-testid="heading"
>
  
</h1>
`;

exports[`Renders correctly renders correctly with text highlight 1`] = `
<h2
  aria-label=""
  className="headingComponent heading-component elementTypeH2 element-type-h2 sizeLarge size-large"
  data-testid="heading"
>
  <div
    className="textWithHighlightWrapper text-with-highlight--wrapper"
    data-testid="text-with-highlight"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <em
      className="highlightText highlight-text"
    >
      Heading
    </em>
    <span>
       with 
    </span>
    <em
      className="highlightText highlight-text"
    >
      highlight
    </em>
    <span>
       text 
    </span>
    <em
      className="highlightText highlight-text"
    >
      heading
    </em>
    <span>
       with 
    </span>
    <em
      className="highlightText highlight-text"
    >
      highlight
    </em>
    <span>
       text without overflow
    </span>
  </div>
</h2>
`;
